package tabladegestion.datos;

/**
 *
 * @author XTREME
 */
public class Premios {
    public int id; 
    public String nombre; 
    public String puntos;
}
