/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package tabladegestion.datos;

/**
 *
 * @author XTREME
 */
public class Residuos {
    public int codigo; 
    public String material; 
    public String objetos;
    public String puntos;
    
    
}
