/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Class.java to edit this template
 */
package tabladegestion.datos;

/**
 *
 * @author XTREME
 */
public class Usuario {
    public String nombre;
    public String carrera;
    public String numeroIdentificacion;
    public String apellido;
    public String genero;
    public int puntos;
            
}
